# ot-harjoitustyo

./: .env  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
data/: database.db
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: monopoli.md  sekvenssikaavio.md
src/: build.py  config.py  date_utils.py  main.py
src/database/: database_connection.py  initialize_database.py  schema.sql  seed_movements.json
src/dto/: movement_option.py  workout_summary.py
src/entities/: movement.py  muscle_group.py  set_entry.py  workout.py
src/repositories/: movement_repository.py  muscle_group_repository.py  workout_repository.py
src/services/: analysis_service.py  movement_service.py  muscle_group_service.py  workout_service.py
src/tests/: workout_repository_test.py
src/tests/fake_repositories/: fake_muscle_group_repository.py  fake_workout_repository.py
src/tests/repositories/: workout_repository_test.py
src/tests/services/: analysis_service_test.py  workout_service_test.py
src/ui/: analysis_view.py  movement_view.py  styles.py  ui.py  workout_form.py  workout_list.py  workout_view.py
